# scintillator-neutron-detection

./: .gitignore  NN.ipynb  Neural Network.ipynb  README.md  dataToLightYield.py  driver.sh  input.txt  keVtoLightYield.pickle
.ipynb_checkpoints/: NN-checkpoint.ipynb  Neural Network-checkpoint.ipynb
ANN_intro_James/.ipynb_checkpoints/: Neural Network-checkpoint.ipynb
ANN_intro_James/ANN1/: ANN_simple_1.py
ANN_intro_James/ANN2/: fold#4_model.h5
ANN_intro_James/ANN3/: ANN_BO.py
ANN_intro_James/IAEA_tecdoc/: load_IAEA_data.py  unfolding_data.pkl
EJ309/: CMakeLists.txt  EJ309  EJ309.cc  example_input.txt  init_vis.mac  input.txt  vis.mac
EJ309-build/: CMakeCache.txt  EJ309  Makefile  cmake_install.cmake
EJ309/include/: ActionInitialization.hh  DetectorConstruction.hh  HitsCollection.hh  MyHit.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh  SystemOfUnits.hh  myHit.hh
EJ309/src/: ActionInitialization.cc  DetectorConstruction.cc  HitsCollection.cc  MyHit.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc  myHit.cc
G4DataToLY/: G4DataToLY.py  ProtonResponseEJ309.txt
Jupyter/: EJ309.ipynb  EJ309_Diagnostics.ipynb  Scintillator Light Response Functions.ipynb
Jupyter/.ipynb_checkpoints/: EJ309-checkpoint.ipynb  eager-checkpoint.ipynb  (+2 more)
old/: Neural Network.ipynb
scripts/: input1.txt  input2.txt  input3.txt  input4.txt  script1.sh  script2.sh  script3.sh  script4.sh
simulate-light-yield/: SimulateLightYield.py
test1/: CMakeLists.txt  test1.cc  vis.mac
test1-build/: CMakeCache.txt  Makefile  cmake_install.cmake  test1  vis.mac
unfolding-neural-network/: BayesianHyperparameterOptimization.py  ExperimentalData.py  GaussianSpectra.py  UnfoldingNeuralNetwork.py  UnfoldingNeuralNetworkDemo.ipynb
(+88 files in other folders)
